--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
+        <link rel="stylesheet" type="text/css" href="/css/login.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="/js/login.js"></script>
+        <script src="/ts/login.ts"></script>
         <title>Page Title</title>
     </head>
 
     <body>
         <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <p id="paragraph">This is a paragraph.</p>
+        <button id="jsButton">Click me</button>
+        <button onclick="myTsFunction()">Click me for typescript</button>
     </body>
 </html>
