Use POJO in response and request

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="/css/login.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="/js/login.js"></script>
+        <script src="/ts/test.ts"></script>
         <title>Page Title</title>
     </head>
 
@@ -17,5 +18,6 @@
             <input id="password" type="text" name="lastname">
           </form>
           <button id="jsButton">Login</button>
+          <button id="tsButton" onclick="tsCall()">Login</button>
     </body>
 </html>
